<resources>
    <string name="app_name">Best programmers</string>
    <string name="btnInspiration">Inspiration</string>
    <string name="tvFirstPersonName">Linus Torvalds</string>
    <string name="tvFirstPersonDate">28.12.1969</string>
    <string name="tvFirstPersonAbout">Finnish-American software engineer who is the creator and, historically, the principal developer of the Linux kernel</string>
    <string name="tvSecondPersonName">Dennis MacAlistair Ritchie</string>
    <string name="tvSecondPersonDate">9.7.1941–12.8.2011</string>
    <string name="tvSecondPersonAbout">He created the C programming language and, with long-time colleague Ken Thompson, the Unix operating system and B programming language.</string>
    <string name="tvThirdPersonName">Guido van Rossum</string>
    <string name="tvThirdPersonDate">31.1.1956</string>
    <string name="tvThirdPersonAbout">Dutch programmer best known as the creator of the Python programming language, for which he was the "Benevolent dictator for life" </string>
    <string name="etNewDescription">Enter New Description ...</string>
    <string name="btnEditDesc">Edit Description</string>
    <string name="rbFirstPerson">First Person</string>
    <string name="rbSecondPerson">Second Person</string>
    <string name="rbThirdPerson">Third Person</string>
    <string name="inspirationFirstPerson">L.T. "Software is like sex: it's is better when it's free."</string>
    <string name="inspirationSecondPerson">D.R. "UNIX is basically a simple operating system, but you have to be a genius to understand the simplicity.”</string>
    <string name="inspirationThirdPerson">G.v.R. "If you decide to design your own language, there are thousands of sort of amateur language designer pitfalls."</string>
</resources>